# hipaa-guard

./: .gitignore  CLAUDE.md  README.md  cli.py  hipaa-guard.config.json  pyproject.toml
agent/: analyst_agent.py  educator_agent.py  fix_agent.py  orchestrator.py  reviewer_agent.py  trend_agent.py  verifier.py
config/: baa_registry.json  rule_config.json
hipaa_guard/: cli.py  paths.py
hipaa_guard/agent/: analyst_agent.py  educator_agent.py  fix_agent.py  orchestrator.py  reviewer_agent.py  trend_agent.py  verifier.py
hipaa_guard/tools/: baa_checker.py  compliance_doc_generator.py  git_hook_installer.py  phi_safe_handler.py  rule_config_updater.py  scanner.py
tests/: test_cli_smoke.py  test_scanner_rules.py
tools/: baa_checker.py  git_hook_installer.py  phi_pattern_library.py  rule_config_updater.py  scanner.py  state_manager.py
workflows/: false_positive_intake.md  fix_loop.md  manual_audit.md  pre_commit_scan.md  weekly_trend_report.md
