[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hipaa-guard"
version = "0.1.0"
description = "AI-powered HIPAA compliance scanner for healthcare software teams"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["hipaa", "compliance", "security", "healthcare", "phi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
ai = ["anthropic>=0.40"]

[project.scripts]
hipaa-guard = "hipaa_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hipaa_guard"]

[tool.hatch.build.targets.wheel.shared-scripts]
# entry point is declared above via [project.scripts]

[tool.pytest.ini_options]
testpaths = ["tests"]
